# galaxy-wrappers

./: README  README.md
Galaxy_SouthGreen/GNPAnnot_tools/eugene/eugene-3.6a/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README.in  THANKS  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  reconf  site.exp
Galaxy_SouthGreen/GNPAnnot_tools/eugene/eugene-3.6a/Procedures/Dev/: sensor_plugin_builder.pl
Galaxy_SouthGreen/GNPAnnot_tools/eugene/eugene-3.6a/Procedures/Format/: ParamParser.pm  coord2gff.pl  coordspliter.pl  egn_joiner.pl  gff2coord.awk  verif_coord.pl
Galaxy_SouthGreen/GNPAnnot_tools/eugene/eugene-3.6a/Procedures/Format/EuGeneAdapt/: eugeneAdapt.pl  gffUtils.pm  logo.pm  seqlogo  template.eps  template.pm
Galaxy_SouthGreen/GNPAnnot_tools/eugene/eugene-3.6a/Procedures/Get/: egn_compseq.pl  egn_getFGENESH4eugene.pl  egn_getRepeat4eugene.pl  egn_leugene.pl
Galaxy_SouthGreen/GNPAnnot_tools/eugene/eugene-3.6a/Test/: README  TestDoc.tex
Galaxy_SouthGreen/GNPAnnot_tools/eugene/eugene-3.6a/Test/Sequences/: SYNO_ARATH.fasta.starts
Galaxy_SouthGreen/GNPAnnot_tools/eugene/eugene-3.6a/Test/TestSuite/: Arabidopsis.exp  Functionals.exp  Optimization.exp  Units.exp  UnitsGff3.exp
Galaxy_SouthGreen/GNPAnnot_tools/eugene/eugene-3.6a/Test/config/: GenerateOutputs.tcl  TestProc.tcl  TestVar.tcl  default.exp
Galaxy_SouthGreen/GNPAnnot_tools/eugene/eugene-3.6a/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
Galaxy_SouthGreen/GNPAnnot_tools/eugene/eugene-3.6a/cfg/: araclean80.par  eugene.par
Galaxy_SouthGreen/GNPAnnot_tools/eugene/eugene-3.6a/config/: mkinstalldirs
Galaxy_SouthGreen/GNPAnnot_tools/eugene/eugene-3.6a/doc/: CmdFlags.idx  CmdFlags.ilg  CmdFlags.ind  Doc.tex  Doc_ATGpr.tex  Doc_AnnotaStruct.tex  Doc_BlastX.tex  Doc_Est.tex  Doc_EuStop.tex  Doc_FrameShift.tex  Doc_GCPlot.tex  Doc_GFF.tex  Doc_GSplicer.tex  Doc_Homology.tex  Doc_IfElse.tex  Doc_MarkovConst.tex  Doc_MarkovIMM.tex  Doc_MarkovProt.tex  Doc_NG2.tex  Doc_NStart.tex  Doc_NStretch.tex  Doc_NcRNA.tex  Doc_PatConst.tex  Doc_PepSignal.tex  Doc_Plotter.tex  Doc_Repeat.tex  Doc_Riken.tex  Doc_SMachine.tex  Doc_SPred.tex  Doc_SpliceWAM.tex  Doc_StartWAM.tex  Doc_Tester.tex  Doc_Transcript.tex  Doc_User.tex  EuGeneDoc.aux  EuGeneDoc.out  EuGeneDoc.tex  EuGeneDoc.toc  Fiches.tex  GenerateDoc.tcl  (+7 more)
Galaxy_SouthGreen/GNPAnnot_tools/eugene/eugene-3.6a/doc/Models/Bouml/: 128002  128002.diagram  128130  128258  128386  128514  128642  128770  128898  129026  129154  129154.diagram  129282  129282.diagram  129410  129410.diagram  129538  129666  129794  129922  130050  130178  130306  130434  130562  130562.diagram  130690  130818  130946  131074  131202  131330  131458  131586  131714  131714.diagram  131842  131970  132098  132866.diagram  (+3 more)
Galaxy_SouthGreen/GNPAnnot_tools/eugene/eugene-3.6a/doc/Sequences/: At5g18830.fasta.genomicAJ011613.fasta  At5g18830.fasta.genomicAJ011613.fasta.est  At5g18830.fasta.genomicAJ011613.fasta.gb  At5g18830.fasta.genomicAJ011613.fasta.spliceP  At5g18830.fasta.genomicAJ011613.fasta.splicePR  At5g18830.fasta.genomicAJ011613.fasta.splices  At5g18830.fasta.genomicAJ011613.fasta.splicesR  At5g18830.fasta.genomicAJ011613.fasta.starts  At5g18830.fasta.genomicAJ011613.fasta.startsR  SYNO_ARATH.fasta  SYNO_ARATH.fasta.blast0  SYNO_ARATH.fasta.blast1  SYNO_ARATH.fasta.blast2
Galaxy_SouthGreen/GNPAnnot_tools/eugene/eugene-3.6a/m4/: Makefile.am
Galaxy_SouthGreen/GNPAnnot_tools/eugene/eugene-3.6a/matrice/: eugene.par
Galaxy_SouthGreen/GNPAnnot_tools/eugene/eugene-3.6a/models/: utr.dist
Galaxy_SouthGreen/GNPAnnot_tools/eugene/eugene-3.6a/models/WAM/: WAM.ARA.ACC.L7.FP.04  WAM.ARA.ACC.L7.TP.05  WAM.ARA.DON.L9.FP.01  WAM.ARA.DON.L9.FP.02  WAM.ARA.DON.L9.TP.01  WAM.ARA.START9.FP.01  WAM.ARA.START9.FP.04  WAM.ARA.START9.TP.02
Galaxy_SouthGreen/GNPAnnot_tools/eugene/eugene-3.6a/plugins/: Makefile  Makefile.am  Makefile.in
Galaxy_SouthGreen/GNPAnnot_tools/eugene/eugene-3.6a/share/eugene/models/: intergenic.dist  intron.dist  rna.dist
Galaxy_SouthGreen/GNPAnnot_tools/eugene/eugene-3.6a/src/: AltEst.cc  AltEst.h  Attributes.cc  Attributes.h  BackP.cc  BackP.h  Const.h  DAG.cc  DAG.h  DNASeq.cc  DNASeq.h  Dll.cc  Dll.h  EuGene.cc  Gap.cc  Gap.h  GeneFeature.cc  GeneFeature.h  GeneFeatureSet.cc  GeneFeatureSet.h  Gff3Line.cc  Gff3Line.h  Hits.cc  Hits.h  Locus.cc  Locus.h  MSensor.cc  MSensor.h  Makefile  Makefile.am  Makefile.in  Param.cc  Param.h  PenaltyDist.cc  PenaltyDist.h  Prediction.cc  Prediction.h  Prediction_cte.h  Range.cc  Range.h  (+11 more)
Galaxy_SouthGreen/GNPAnnot_tools/eugene/eugene-3.6a/src/.deps/: AltEst.Po  Attributes.Po  BackP.Po  DAG.Po  DNASeq.Po  Dll.Po  EuGene.Po  Gap.Po  GeneFeature.Po  GeneFeatureSet.Po  Gff3Line.Po  Hits.Po  Locus.Po  MSensor.Po  Param.Po  PenaltyDist.Po  Prediction.Po  Range.Po  Sensor.Po  SoTerms.Po  State.Po  System.Po  Target.Po
Galaxy_SouthGreen/GNPAnnot_tools/eugene/eugene-3.6a/src/GDIF/: Makefile  Makefile.am  Makefile.in  gdIF.c  gdIF.h
Galaxy_SouthGreen/GNPAnnot_tools/eugene/eugene-3.6a/src/GDIF/.deps/: gdIF.Po
Galaxy_SouthGreen/GNPAnnot_tools/eugene/eugene-3.6a/src/Parametrization/: Chromosome.cc  Chromosome.h  CrossingOver.cc  CrossingOver.h  Genetic.cc  Genetic.h  LineSearch.cc  LineSearch.h  Makefile  Makefile.am  Makefile.in  Mutating.cc  Mutating.h  OptiAlgorithm.cc  OptiAlgorithm.h  ParaOptimization.cc  ParaOptimization.h  Random.cc  Random.h  Scaling.cc  Scaling.h  Selecting.cc  Selecting.h  Sharing.cc  Sharing.h  SimulatedAnnealing.cc  SimulatedAnnealing.h
Galaxy_SouthGreen/GNPAnnot_tools/eugene/eugene-3.6a/src/Parametrization/.deps/: Chromosome.Po  CrossingOver.Po  Genetic.Po  LineSearch.Po  Mutating.Po  OptiAlgorithm.Po  ParaOptimization.Po  Random.Po  Scaling.Po  Selecting.Po  Sharing.Po  SimulatedAnnealing.Po
Galaxy_SouthGreen/GNPAnnot_tools/eugene/eugene-3.6a/src/SensorPlugins/: Makefile  Makefile.am  Makefile.in
Galaxy_SouthGreen/GNPAnnot_tools/eugene/eugene-3.6a/src/SensorPlugins/0_SensorTk/: BStrArray.cc  BStrArray.h  (+8 more)
(+1042 files in other folders)
