# ------------------------------------------------------------------
# Copyright (C) 2004 INRA <eugene@ossau.toulouse.inra.fr>
#
# This program is open source; you can redistribute it and/or modify
# it under the terms of the Artistic License (see LICENSE file).
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. 
#
# You should have received a copy of Artistic License along with
# this program; if not, please see http://www.opensource.org
#
# $Id: Makefile.am,v 1.1 2005-03-17 13:54:48 cros Exp $
# ------------------------------------------------------------------
# File:     plugins/Makefile.am
# Contents: copy plugins

all:
	cp -f ../src/SensorPlugins/*/*.so .

CLEANFILES = *.so *~
