# ------------------------------------------------------------------
# Copyright (C) 2004 INRA <eugene@ossau.toulouse.inra.fr>
#
# This program is open source; you can redistribute it and/or modify
# it under the terms of the Artistic License (see LICENSE file).
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. 
#
# You should have received a copy of Artistic License along with
# this program; if not, please see http://www.opensource.org
#
# $Id: Makefile.am,v 1.1 2004-09-16 12:50:42 cros Exp $
# ------------------------------------------------------------------
# File:     Makefile.am
# Contents: compilation of the GDIF directory
# ------------------------------------------------------------------

noinst_LIBRARIES = libGDIF.a
libGDIF_a_SOURCES = gdIF.c gdIF.h


CLEANFILES = *~
